Fixed problems on safari

--- a/wordpress/wp-content/themes/leonart/src/sass/components/responsive/header/_main-nav-r.scss
+++ b/wordpress/wp-content/themes/leonart/src/sass/components/responsive/header/_main-nav-r.scss
@@ -6,8 +6,15 @@
 
 @media screen and (max-width: 920px) {
     .l-main-nav {
+        &__item:first-of-type::before {
+            content: "";
+            @include hidden;
+            position: absolute;
+        }
         &__item+.l-main-nav__item::before {
             content: "";
+            @include hidden;
+            position: absolute;
         }
     }
 }
