--- a/wordpress/wp-content/themes/leonart/src/sass/objects/_header.scss
+++ b/wordpress/wp-content/themes/leonart/src/sass/objects/_header.scss
@@ -35,6 +35,7 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
+        align-items: center;
     }
     &--home {
         margin-bottom: 5em;
